--- a/debug.env
+++ b/debug.env
@@ -1,7 +1,7 @@
 PYTHONUNBUFFERED=1
 
-# context.teamId=291  # team_id
-# context.workspaceId=418  # workspace_id
+context.teamId=313  # team_id
+context.workspaceId=456  # workspace_id
 
 # modal.state.slyProjectId=9697  # project_id
 
