--- a/config.json
+++ b/config.json
@@ -1,21 +1,25 @@
 {
-    "name": "Apply Classifier to Images Project",
-    "type": "app",
-    "version": "2.0.0",
-    "categories": [
-      "neural network",
-        "labeling tools"
-    ],
-    "description": "label project images or objects using NN",
-    "docker_image": "supervisely/base-py-branched:1.0.1",
-    "entrypoint": "python -m uvicorn src.main:g.app --host 0.0.0.0 --port 8000",
-    "port": 8000,
-    "task_location": "workspace_tasks",
-    "icon_background": "#FFFFFF",
+  "name": "Apply Classifier to Images Project",
+  "type": "app",
+  "version": "2.0.0",
+  "categories": [
+    "neural network",
+    "labeling tools"
+  ],
+  "description": "label project images or objects using NN",
+  "docker_image": "supervisely/base-py-branched:1.0.1",
+  "entrypoint": "python -m uvicorn src.main:g.app --host 0.0.0.0 --port 8000",
+  "port": 8000,
+  "task_location": "workspace_tasks",
+  "icon_background": "#FFFFFF",
+  "icon": "https://img.icons8.com/color/96/000000/tags--v1.png",
+  "icon_cover": true,
 
-    "icon": "https://img.icons8.com/color/96/000000/tags--v1.png",
-    "icon_cover": true,
+  "context_menu": {
+    "target": [
+      "images_project"
+    ]
+  },
 
-    "instance_version": "6.4.49"
-
+  "instance_version": "6.4.49"
 }
