--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
     "labeling tools"
   ],
   "description": "label project images or objects using NN",
-  "docker_image": "supervisely/base-py:6.18.1",
+  "docker_image": "supervisely/base-py-sdk:6.18.1",
   "entrypoint": "python -m uvicorn src.main:g.app --host 0.0.0.0 --port 8000",
   "port": 8000,
   "task_location": "workspace_tasks",
