sly version upgrade, change preview images urls

--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
     "inference interfaces"
   ],
   "description": "label project images or objects using NN",
-  "docker_image": "supervisely/base-py-sdk:6.18.1",
+  "docker_image": "supervisely/base-py-sdk:6.23.1",
+  "instance_version": "6.4.57",
   "entrypoint": "python -m uvicorn src.main:g.app --host 0.0.0.0 --port 8000",
   "port": 8000,
   "task_location": "workspace_tasks",
@@ -20,6 +21,5 @@
       "images_project"
     ],
     "context_root": "Neural Networks"
-  },
-  "instance_version": "6.4.49"
+  }
 }
